feat: create namespace

--- a/harness/cd/whoami/service.yaml
+++ b/harness/cd/whoami/service.yaml
@@ -14,7 +14,7 @@ service:
               store:
                 type: Github
                 spec:
-                  connectorRef: vjcspy_gitconnector
+                  connectorRef: vjcspygitconnector
                   gitFetchType: Branch
                   folderPath: /k8s/app/whoami
                   repoName: infra
