--- a/k8s/app/whoami/templates/hpa.yaml
+++ b/k8s/app/whoami/templates/hpa.yaml
@@ -5,7 +5,7 @@ metadata:
   name: {{ include "whoami.fullname" . }}
   labels:
     {{- include "whoami.labels" . | nindent 4 }}
-  namespace: {{ include "whoami.serviceAccountName" . }}
+  namespace: {{ include "whoami.name" . }}
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
