--- a/k8s/app/whoami/templates/serviceaccount.yaml
+++ b/k8s/app/whoami/templates/serviceaccount.yaml
@@ -5,7 +5,7 @@ metadata:
   name: {{ include "whoami.serviceAccountName" . }}
   labels:
     {{- include "whoami.labels" . | nindent 4 }}
-  namespace: {{ include "whoami.serviceAccountName" . }}
+  namespace: {{ include "whoami.name" . }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
