--- a/k8s/app/whoami/templates/deployment.yaml
+++ b/k8s/app/whoami/templates/deployment.yaml
@@ -4,7 +4,7 @@ metadata:
   name: {{ include "whoami.fullname" . }}
   labels:
     {{- include "whoami.labels" . | nindent 4 }}
-  namespace: {{ include "whoami.serviceAccountName" . }}
+  namespace: {{ include "whoami.name" . }}
 spec:
   {{- if not .Values.autoscaling.enabled }}
   replicas: {{ .Values.replicaCount }}
