--- a/k8s/app/whoami/templates/ingress.yaml
+++ b/k8s/app/whoami/templates/ingress.yaml
@@ -9,7 +9,7 @@ metadata:
   annotations:
     {{- toYaml . | nindent 4 }}
   {{- end }}
-  namespace: {{ include "whoami.serviceAccountName" . }}
+  namespace: {{ include "whoami.name" . }}
 spec:
   {{- with .Values.ingress.className }}
   ingressClassName: {{ . }}
