--- a/k8s/init/dashboard/ingress.yaml
+++ b/k8s/init/dashboard/ingress.yaml
@@ -4,23 +4,21 @@ metadata:
   name: kubernetes-dashboard-ingress
   namespace: kubernetes-dashboard
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /$2
-    nginx.ingress.kubernetes.io/ssl-redirect: "true" # Chuyển hướng sang HTTPS
-    nginx.ingress.kubernetes.io/use-regex: "true" # Cho phép sử dụng regex trong đường dẫn
+    nginx.ingress.kubernetes.io/ssl-redirect: "true"
 spec:
   ingressClassName: nginx
   tls:
     - hosts:
-        - k8s.dinhkhoile.com # Domain cho TLS
-      secretName: kubernetes-dashboard-tls # Tên Secret chứa chứng chỉ TLS
+        - k8s.dinhkhoile.com
+      secretName: kubernetes-dashboard-tls
   rules:
     - host: k8s.dinhkhoile.com
       http:
         paths:
-          - path: /dashboard(/|$)(.*)
+          - path: /
             pathType: Prefix
             backend:
               service:
-                name: kubernetes-dashboard-web # Service của Kubernetes Dashboard
+                name: kubernetes-dashboard-web
                 port:
-                  number: 8000 # Port của Service
+                  number: 8000
