--- a/k8s/app/whoami/templates/ingress.yaml
+++ b/k8s/app/whoami/templates/ingress.yaml
@@ -21,7 +21,7 @@ spec:
         {{- range .hosts }}
         - {{ . | quote }}
         {{- end }}
-      secretName: {{ .secretName }}
+      secretName: {{ include "whoami.tlsSecretFullName" $ }}
     {{- end }}
   {{- end }}
   rules:
