--- a/k8s/app/whoami/templates/deployment.yaml
+++ b/k8s/app/whoami/templates/deployment.yaml
@@ -24,6 +24,13 @@ spec:
         {{- toYaml . | nindent 8 }}
         {{- end }}
     spec:
+      initContainers:
+        - name: check-host-mounted-ebs-volume
+          image: busybox
+          command: [ 'sh', '-c', 'for i in $(seq 1 5); do if [ -f /existing_ebs_volume/DONT_DELETE ]; then exit 0; fi; sleep 15; done; exit 1' ]
+          volumeMounts:
+            - name: host-volume
+              mountPath: /existing_ebs_volume
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
