--- a/k8s/app/ggg-brand/templates/deployment.yaml
+++ b/k8s/app/ggg-brand/templates/deployment.yaml
@@ -46,7 +46,7 @@ spec:
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
-            - name: http
+            - name: https
               containerPort: {{ .Values.service.port }}
               protocol: TCP
 {{/*          livenessProbe:*/}}
