fix: fix https redirect magento

--- a/k8s/app/ggg-brand/values.yaml
+++ b/k8s/app/ggg-brand/values.yaml
@@ -63,6 +63,7 @@ ingress:
   annotations:
     kubernetes.io/ingress.class: nginx
     kubernetes.io/tls-acme: "true"
+    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
   hosts:
     - host: brand-pcms.ggg.systems
       paths:
