--- a/k8s/app/ggg-brand/templates/service.yaml
+++ b/k8s/app/ggg-brand/templates/service.yaml
@@ -8,7 +8,7 @@ spec:
   type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.service.port }}
-      targetPort: https
+      targetPort: 443
       protocol: TCP
       name: https
   selector:
