--- a/k8s/app/ggg-brand/values.yaml
+++ b/k8s/app/ggg-brand/values.yaml
@@ -67,8 +67,15 @@ ingress:
     nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
     nginx.ingress.kubernetes.io/proxy-ssl-protocols: "TLSv1.2 TLSv1.3"
-    nginx.ingress.kubernetes.io/ssl-passthrough: "true"  # Enable SSL passthrough
+    nginx.ingress.kubernetes.io/ssl-passthrough: "false"  # Enable SSL passthrough
     nginx.ingress.kubernetes.io/secure-backends: "true"
+    # fix magento buffer header
+    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
+    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
+    nginx.ingress.kubernetes.io/proxy-buffers-size: "256k"
+    nginx.ingress.kubernetes.io/proxy-busy-buffers-size: "256k"
+    nginx.ingress.kubernetes.io/proxy-body-size: "100M"
+    nginx.ingress.kubernetes.io/proxy-large-client-header-buffers: "4 256k"
   hosts:
     - host: brand-pcms.ggg.systems
       paths:
