Update environment k8s-single-env

--- a/harness/environment/k8s-single-environment.yaml
+++ b/harness/environment/k8s-single-environment.yaml
@@ -1,7 +1,8 @@
 environment:
   name: k8s-single-env
   identifier: k8ssingleenv
+  description: Single ENV for K8s Helm Chart Application
+  tags: {}
+  type: Production
   orgIdentifier: default
   projectIdentifier: default_project
-  type: Production
-  description: Single ENV
