Update pipeline meta-pipeline

--- a/harness/cd/meta/k8s-rolling-pipeline.yaml
+++ b/harness/cd/meta/k8s-rolling-pipeline.yaml
@@ -42,4 +42,10 @@ pipeline:
                       key: configuration
                       scope: Pipeline
                   timeout: 2m
+          environment:
+            environmentRef: k8ssingleenv
+            deployToAll: false
+            infrastructureDefinitions:
+              - identifier: k8shelmchartinfra
         tags: {}
+        timeout: 2m
