Update pipeline meta-pipeline

--- a/harness/cd/meta/k8s-rolling-pipeline.yaml
+++ b/harness/cd/meta/k8s-rolling-pipeline.yaml
@@ -58,6 +58,14 @@ pipeline:
           deploymentType: Kubernetes
           service:
             serviceRef: meta
+            serviceInputs:
+              serviceDefinition:
+                type: Kubernetes
+                spec:
+                  variables:
+                    - name: meta_project_name
+                      type: String
+                      value: <+input>.allowedValues(stock,binance)
           environment:
             environmentRef: k8ssingleenv
             deployToAll: false
