Update pipeline meta-pipeline

--- a/harness/cd/meta/k8s-rolling-pipeline.yaml
+++ b/harness/cd/meta/k8s-rolling-pipeline.yaml
@@ -65,7 +65,8 @@ pipeline:
                   variables:
                     - name: meta_project_name
                       type: String
-                      value: <+input>.allowedValues(stock,binance)
+                      default: stock
+                      value: <+input>.default(stock).allowedValues(stock,binance)
           environment:
             environmentRef: k8ssingleenv
             deployToAll: false
